Archive2/04/13a35d3177ef48/output
main.cpp: In function 'int main()':
main.cpp:16:11: error: request for member 'insert' in 'mymap', which is of non-class type 'std::map<int, int, C>(C)'
     mymap.insert(pair<int,int>(1,1));
           ^
